0.0.6    2021-06-04

- More accurate detection of int/float/string types when creating a database

2021-04-08    0.0.5    Introduce optional caching for Dictionaries, to make reads faster at the
                         expense of eating more memory;
                       Other speed improvements

2020-12-18    0.0.4    Bugfixes for writing nested data structures and reading empty tied hashes;
                       Bugfix for calling exists() on an empty Dictionary;
                       De-dup entire hashes/arrays on file creation if their contents are the same

2020-12-09    0.0.3    More floating point fixes, for perls using gcc's libquadmath

2020-12-05    0.0.2    Fix floating point issues in tests;
                       Stop writing numeric hash keys because of FP imprecision

2020-12-03    0.0.1    First release