@@ -56,7 +56,7 @@ integer numeric types are also available as NegativeByte, NegativeMedium and so 
 
 =item Huge - 64 bit integer
 
-=item Float - 64 bit IEEE754 double-precision
+=item Float64 - 64 bit IEEE754 double-precision
 
 =item Null
 
@@ -121,11 +121,9 @@ Byte, Short, Medium, and Long are valid for lengths.
 
     0b1010 - Null
 
-    0b1011 - Float
+    0b1011 - Float64
 
-    0b1100 to 0b1111 - Reserved
-
-Finally the last two bits are Reserved.
+Any unspecified bits or combinations of bits are reserved for future use.
 
 =head2 NODE DATA
 
