@@ -1,3 +1,8 @@
+X.X.X    XXXX-XX-XX
+
+- Float type renamed to Float64 in preparation for support for different length floats
+  (no functional or format changes)
+
 0.0.6    2021-06-04
 
 - More accurate detection of int/float/string types when creating a database
